--- a/view/assets/styles/font-icon.css
+++ b/view/assets/styles/font-icon.css
@@ -1,5 +1,5 @@
-.card-button > i::before {
-    content: "\f107";
+.card-button>i::before {
+    content: '\f107';
 }
 
 i.start-game {
@@ -12,55 +12,47 @@ i.start-game {
 }
 
 i.start-game::before {
-    content: "\f135";
-    font-family: "fa";
-    font-style: normal;
-    font-size: 1.3rem;
+    content: '\f135';
 }
 
 i.pro-settings::before {
-    content: "\f1de";
-    font-family: "fa";
-    font-style: normal;
-    font-size: 1.3rem;
+    content: '\f1de';
 }
 
 i.debug-settings::before {
-    content: "\f0ad";
-    font-family: "fa";
-    font-style: normal;
-    font-size: 1.3rem;
+    content: '\f0ad';
 }
 
 i.java-logo::before {
-    content: "\f4e4";
-    font-family: "fa";
+    content: '\f4e4';
+    font-family: 'fa';
     font-style: normal;
     font-size: 1.9rem;
 }
+
 i.arrows-rotate {
     margin-top: 6px;
 }
+
 i.arrows-rotate::before {
-    content: "\f021";
-    font-family: "fa-pro";
+    content: '\f021';
+    font-family: 'fa-pro';
     font-weight: 400;
     font-style: normal;
     font-size: 1.6rem;
 }
+
 i.paintbrush {
     margin-top: 4px;
 }
+
 i.paintbrush::before {
-    content: "\f1fc";
-    font-family: "fa-pro";
-    font-weight: 200;
-    font-style: normal;
-    font-size: 1.3rem;
+    content: '\f1fc';
 }
+
 i.spinner-third,
 i.circle-check {
-    font-family: "Font Awesome 6 Duotone";
+    font-family: 'Font Awesome 6 Duotone';
     font-style: normal;
     font-weight: 600;
     margin-right: 9.1px;
@@ -68,78 +60,80 @@ i.circle-check {
     justify-content: center;
     align-items: center;
 }
+
 i.circle-check {
-    font-family: "fa-pro";
+    font-family: 'fa-pro';
     font-weight: 200;
     margin-right: 10px;
 }
+
 i.spinner-third::before {
-    content: "\f3f4";
+    content: '\f3f4';
     position: absolute;
 }
 
 i.spinner-third::after {
-    content: "\f3f4\f3f4";
+    content: '\f3f4\f3f4';
     color: silver;
 }
 
 i.circle-check::before {
-    content: "\f058";
+    content: '\f058';
     color: #008501;
 }
 
-div.title-bar > div.button #min::before {
-    content: "\f068";
+div.title-bar>div.button #min::before {
+    content: '\f068';
     font-size: 1.4rem;
     line-height: 2.7;
     transform: scale(0.85, 1);
 }
 
-div.title-bar > div.button #close::before {
-    content: "\f00d";
+div.title-bar>div.button #close::before {
+    content: '\f00d';
     font-size: 1.4rem;
     line-height: 2.2;
 }
 
 i#user-add:before {
-    content: "\f3fd";
+    content: '\f3fd';
 }
 
 i#nav-3:before {
-    content: "\f234";
+    content: '\f234';
 }
 
 i#nav-4:before {
-    content: "\f019";
+    content: '\f019';
 }
 
 i#nav-5:before {
-    content: "\f013";
+    content: '\f013';
 }
 
 i#nav-6:before {
-    content: "\f085";
+    content: '\f085';
 }
 
 i#nav-7:before {
-    content: "\f625";
+    content: '\f625';
 }
 
 button#start::before {
-    content: "\f135";
+    content: '\f135';
 }
 
-.choose-file > i::before {
-    content: "\f07c";
+.choose-file>i::before {
+    content: '\f07c';
     font-style: normal;
 }
 
 i.folder-arrow-down {
-    font-family: "fa-pro";
+    font-family: 'fa-pro';
 }
 
 i.folder-arrow-down::before {
-    content: "\f019";
+    content: '\f019';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -147,20 +141,53 @@ i.folder-arrow-down::before {
 }
 
 .sidebar-button i::before {
-    content: "\f0c9";
+    content: '\f0c9';
 }
-i.rectangle-terminal::before{
+
+i.rectangle-terminal::before {
     content: '\e236';
 }
+
 i.screwdriver-wrench::before {
     content: '\f7d9';
 }
+
 i.folders::before {
     content: '\f660';
 }
+
 i#newspaper::before {
     content: '\f1ea';
 }
-i#cube::before{
+
+i#cube::before {
     content: '\f1b2';
+}
+
+i.gamepad::before {
+    content: '\f11b';
+}
+
+i.user::before {
+    content: '\f007';
+}
+
+i.house::before {
+    content: '\f015';
+}
+
+i.palette::before {
+    content: '\f53f';
+}
+
+i.download::before {
+    content: '\f019';
+}
+
+i.wheelchair::before {
+content: '\f193';
+}
+
+i.arrow-left::before {
+    content: '\f060';
 }
