--- a/view/index.html
+++ b/view/index.html
@@ -29,7 +29,7 @@
   <script src="./i18n/zh_cn.js"></script>
   <script src="./renderer.js"></script>
   <script type="module" src="./assets/scripts/onload.js"></script>
-<!-- 由脚本控制的样式表 -->
+  <!-- 由脚本控制的样式表 -->
   <style id="style"></style>
 </head>
 
@@ -69,6 +69,28 @@
     <main class="page" onclick="$('#sidebar').addClass('sidebar-close');">
       <div class="page" id="main">
         <!-- 页面主要内容 -->
+        <div>
+          <div class="card">
+            <card-header title="Black Magic 帐户" description="管理你的 Black Magic 帐户" icon="arrows-rotate" click="expanded_card(this, 116)">
+            </card-header>
+            <div class="card-body">
+              <div class="user-data">
+                <div>
+                  <img src="./assets/images/BrokenDeer.png" alt="你的头像">
+                  <div>
+                    <h2>Broken_Deer</h2>
+                    <p>Black Magic 帐户</p>
+                    <p>注册于 2022/11/27</p>
+                  </div>
+                </div>
+                <div>
+                  <button class="command-button" onclick="">修改信息</button>
+                  <button class="command-button" onclick="">退出登录</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
   </div>
 
