--- a/view/assets/styles/animation.css
+++ b/view/assets/styles/animation.css
@@ -94,7 +94,7 @@ body {
 }
 
 .slider>div.orbit>div {
-    background: #7da8e9;
+    background: #008023;
     height: 100%;
     width: 4px;
     min-width: 4px;
@@ -119,7 +119,7 @@ body {
 .slider>div.slider_btn>div {
     width: 53%;
     height: 53%;
-    background: #7da8e9;
+    background: #008023;
     border-radius: 100%;
     transition: all 0.2s ease;
 }
