--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -39,6 +39,10 @@ span.name {
     transition: all 0.2s ease;
 }
 
+.input-data-file {
+        width: 440px;
+}
+
 .input-data:hover,
 button.command-button:hover,
 .input-file .choose-file:hover {
@@ -114,7 +118,7 @@ button.command-button:hover,
 }
 
 .input-text .underline {
-    background: #1a73e8;
+    background: #008023;
     margin-left: -8px;
     height: 2px;
     width: calc(100% + 16px);
@@ -180,8 +184,8 @@ div.page-title {
 }
 
 .input-box label input:checked~span {
-    outline: 1px solid #7da8e9;
-    background-color: #7da8e9;
+    outline: 1px solid #008023;
+    background-color: #008023;
 }
 
 .input-box:hover span>div {
@@ -222,7 +226,7 @@ button.command-button:active,
 /* 文件选择 */
 
 .input-file .choose-file {
-    width: 52px;
+    width: 42px;
     height: 32px;
     margin-left: 6.5px;
     outline: 1px solid #0000001c;
