--- a/view/index.html
+++ b/view/index.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) Broken Deer. All rights reserved -->
 <!DOCTYPE html>
 <html>
 
@@ -68,7 +69,7 @@
     </div>
     <main class="page" onclick="$('#sidebar').addClass('sidebar-close');">
       <div class="page" id="main">
-        <!-- 页面主要内容 -->
+        <!-- 在这里挂载主要页面内容 -->
         <div>
 
         </div>
