--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -56,11 +56,12 @@ button.command-button:hover,
     padding-top: 0.1em;
     display: inline-grid;
     flex-direction: column;
-    width: auto;
-    min-width: 16rem;
+    /* width: 4rem; */
+    /* min-width: 16rem; */
     background: #fff;
     align-items: center;
     justify-items: end;
+    max-width: 16rem;
 }
 
 .input-data-list:active>div {
@@ -69,7 +70,7 @@ button.command-button:hover,
 
 .input-data-list>div {
     font-size: 0.8rem;
-    width: 15rem;
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
     transition: color 0.06s ease;
