Feat: 输入框、开关可以操作配置文件了

--- a/view/index.html
+++ b/view/index.html
@@ -24,15 +24,14 @@
   <script src="./vendor/vue.js"></script>
   <script src="./app/core/auth.js"></script>
   <script src="./app/core/installer.js"></script>
-  <script src="./app/core/loadconfig.js"></script>
   <script src="./app/view/Button.js"></script>
   <script src="./app/view/Card.js"></script>
   <script src="./app/view/Control.js"></script>
   <script src="./app/view/Page.js"></script>
   <script src="./app/view/PopupWindow.js"></script>
   <script src="./app/view/Sidebar.js"></script>
+  <script src="./renderer.js"></script>
   <script src="./app/onload.js" type="module"></script>
-  <script type="module" src="./assets/scripts/onload.js"></script>
   <!-- 由脚本控制的样式表 -->
   <style id="style"></style>
 </head>
