--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -89,6 +89,7 @@ button.command-button:hover,
     overflow: hidden;
     font-size: 0.8rem;
     min-width: 16.3rem;
+    max-height: 350px;
     box-shadow: 0px 0px 6px #00000030;
     cursor: default;
     z-index: 10;
