--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -25,6 +25,7 @@ span.name {
     height: 100%;
     width: 100%;
     text-align: inherit;
+    z-index: 10;
 }
 
 .input-data {
@@ -41,8 +42,8 @@ span.name {
 }
 
 .input-data-file {
-        /* width: 440px; */
-        display: inline-block;
+    /* width: 440px; */
+    display: inline-block;
 }
 
 .input-data:hover,
@@ -257,7 +258,73 @@ button.command-button:active,
     text-align: center;
     display: inline;
     margin: 0 10px;
+    flex-shrink: 0;
 }
+
+/* 滑块 */
+
+.slider {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    float: right;
+}
+
+.slider>div {
+    background: #600081;
+    height: 3.5px;
+    width: 4px;
+    /* min-width: 4px; */
+    border-radius: 10px;
+    position: absolute;
+    pointer-events: none;
+}
+
+.slider>div.slider_btn>div {
+    width: 53%;
+    height: 53%;
+    background: #600081;
+    border-radius: 100%;
+    transition: all 0.2s ease;
+}
+
+.slider input[type=range] {
+    appearance: none;
+    outline: none;
+    height: 100%;
+    background: #00000000;
+    border-radius: 100px;
+    box-sizing: content-box;
+}
+
+.slider input[type=range]::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    margin-top: -8px;
+    border-radius: 100px;
+    outline: 1px solid #ececec;
+    background: #600081;
+    box-shadow: inset 0 0 0 5px #ffffff;
+    pointer-events: all;
+    transition: all .2s ease;
+}
+
+.slider input[type=range]::-webkit-slider-thumb:hover {
+    box-shadow: inset 0 0 0 3.7px #ffffff;
+}
+
+.slider input[type=range]:active::-webkit-slider-thumb {
+    box-shadow: inset 0 0 0 6px #ffffff;
+}
+
+.slider input[type=range]::-webkit-slider-runnable-track {
+    appearance: none;
+    height: 3.5px;
+    border-radius: 10px;
+    background-color: #00000045
+}
+
 
 /* 不可用控件 */
 
@@ -282,7 +349,7 @@ button.command-button:active,
 }
 
 .disable .orbit>div {
-    background: #7da8e952 !important;
+    background: #9e9e9e8f !important;
     transition: all 0.2s ease;
 }
 
