--- a/view/assets/styles/control.css
+++ b/view/assets/styles/control.css
@@ -93,7 +93,7 @@ button.command-button:hover,
     max-height: 350px;
     box-shadow: 0px 0px 6px #00000030;
     cursor: default;
-    z-index: 10;
+    z-index: 20100;
 }
 
 .input-list li.option {
@@ -430,7 +430,7 @@ div#color_chooser>div:first-child ul>li>div {
     height: 28px;
     border-radius: 5px;
     box-shadow: 1px 1px 5px rgb(0 0 0 / 33%);
-    background-color: #27009e;
+    background-color: #008c48;
 }
 
 div#color_chooser>div:last-child {
