Feat(下载器): Aria2

--- a/view/index.html
+++ b/view/index.html
@@ -23,6 +23,7 @@
   <script src="./vendor/jquery-ui.min.js"></script>
   <script src="./vendor/vue.js"></script>
   <script src="./app/core/auth.js"></script>
+  <script src="./app/core/download.js"></script>
   <script src="./app/core/installer.js"></script>
   <script src="./app/view/Button.js"></script>
   <script src="./app/view/Card.js"></script>
